### Added

### Changed

### Fixed
- Fixed issue with empty custom database.